Fix Height and layout of Config Provider Pages
Summary:
Reduced min-height to prevent action buttons from overflowing in y direction.
Changed datacenter string to datacenters.
Made the Regions, Zones and Hosts columns of same height for On-Prem Config.
{F3030}

{F3031}

{F3032}

{F3033}

{F3034}

Test Plan:
Go To config tabs in UI.
Verify layout looks as expected.

Reviewers: karthik, shawn, ram

Reviewed By: ram

Subscribers: sid, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D1633

--- a/managed/ui/src/components/config/ConfigProvider/providerConfig.scss
+++ b/managed/ui/src/components/config/ConfigProvider/providerConfig.scss
@@ -3,7 +3,8 @@
 @import "_style/colors.scss";
 
 .provider-config-container {
-  height: 590px;
+  min-height: 500px;
+  height: 100%;
 }
 .provider-config-container .list-group {
   margin-right: 2%;
